Updated to .NET Core

--- a/.gitignore
+++ b/.gitignore
@@ -490,3 +490,5 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/rider,macos,windows,visualstudio,visualstudiocode,resharper
+
+.idea/
