--- a/src/MasteringDebugging/MasteringDebugging.csproj
+++ b/src/MasteringDebugging/MasteringDebugging.csproj
@@ -1,15 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>MasteringDebugging</RootNamespace>
-    <Authors>Joseph Guadagno</Authors>
-    <Company>JosephGuadagno.NET, LLC</Company>
-    <Description>The source code for the *Master Debugging* or the *Debugging Tips and Tricks* presentation.</Description>
-    <Copyright>Copyright ©2014-2021, Joseph Guadagno, JosephGuadagno.Net, LLC; josephguadagno.net</Copyright>
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
